# discord-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  events.rs  gateway.rs  handlers.rs  interactions.rs  lib.rs  resources.rs
src/client/: gateway.rs  mod.rs  websocket.rs
src/enums/: gateway.rs
src/events/: webhook.rs
src/events/types/: webhook.rs
src/gateway/: enums.rs  events.rs  websocket.rs
src/handlers/: application_command_permissions_update.rs  auto_moderation_rule.rs  channel.rs  ready.rs
src/interactions/: application_commands.rs  types.rs
src/interactions/types/: application_command.rs
src/internal/: traits.rs
src/model/: mod.rs
src/model/events/: gateway.rs
src/model/interacion/: application_commands.rs  message_components.rs  mod.rs
src/model/resources/: application.rs  application_role_connection_metadata_object.rs  audit_log.rs  auto_moderation.rs  channel.rs  emoji.rs  entitlement.rs  invite.rs  lobby.rs  message.rs  mod.rs  poll.rs  sku.rs  soundboard.rs  stage_instance.rs  sticker.rs  subscriptions.rs  user.rs  voice.rs  webhook.rs
src/model/resources/guild/: ban.rs  integration.rs  mod.rs  scheduled_event.rs  welcome_screen.rs
src/model/topics/: mod.rs  permisssions.rs  teams.rs
src/utils/: options.rs
