[package]
name = "discord-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.14", features = ["blocking"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls-vendored"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sys-info = "0.9.1"
dotenvy = "0.15.7"
futures = { version = "0.3.31", features = ["thread-pool"] }
bytes = "1.10.1"